--- a/firebase-project/public/index.html
+++ b/firebase-project/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESP Firebase App</title>
+    <title>FindBlue</title>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -32,7 +32,10 @@
 
 </head>
 <body>
-    <h1>ESP32 Firebase Web App Example</h1>
-    <p>Reading str: <span id="reading-activity"></span></p>
+    <h1>Lokasi dan Aktivitas Lansia</h1>
+    <p>Activity: <span id="reading-activity"></span></p>
+    <p>d1: <span id="reading-d1"></span></p>
+    <p>d2: <span id="reading-d2"></span></p>
+    <p>d3: <span id="reading-d3"></span></p>
 </body>
 </html>
