--- a/bootstrap/public/aktivitas.html
+++ b/bootstrap/public/aktivitas.html
@@ -9,11 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./style-3.css">
 
-     <!-- The core Firebase JS SDK is always required and must be listed first -->
+    
      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-
-     <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
      <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
      
      <script>
@@ -29,7 +26,7 @@
      };
      firebase.initializeApp(firebaseConfig);
      var database = firebase.database();
-     </script>
+     </script> 
  
      <script src="app.js" defer></script>
 
@@ -44,9 +41,9 @@
     </div>
 
     <div class="activity-vector">
-      <img src="../img/walking.png" class = "logo-act-1" width ="75" width = "75">
-      <img src="../img/falling.png" class = "logo-act-2" width ="75" width = "75">
-      <img src="../img/sleeping.png" class = "logo-act-3" width ="75" width = "75">
+      <img src="./img/walking.png" class = "logo-act-1" width ="75" width = "75">
+      <img src="./img/falling.png" class = "logo-act-2" width ="75" width = "75">
+      <img src="./img/sleeping.png" class = "logo-act-3" width ="75" width = "75">
     </div>
 
     <div class="box-2">
