--- a/bootstrap/public/choose.html
+++ b/bootstrap/public/choose.html
@@ -1,13 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Home</title>
   </head>
@@ -15,29 +23,46 @@
     <h2><strong>Hi, Selamat datang di Findblue!</strong></h2>
 
     <main>
-        <a href="./lokasi.html">
-            <button type="button" class="btn btn-light btn-sm btn-primary-spacing" >Pelacakan Lokasi</button>
-        </a>
-        <a href="./aktivitas.html">    
-            <button type="button" class="btn btn-light btn-sm btn-space">Pengawasan Aktivitas</button>
-        </a>    
-            <div class="container">
-                <div class="column">
-                    <img src="../img/lokasi.png" class="image" alt="map">
-                </div>
-                <div class="column">
-                    <img src="../img/act.png" class="image" alt="act">
-                </div>
-            </div>
+      <a href="./lokasi.html">
+        <button type="button" class="btn btn-light btn-sm btn-primary-spacing">
+          Pelacakan Lokasi
+        </button>
+      </a>
+      <a href="./aktivitas.html">
+        <button type="button" class="btn btn-light btn-sm btn-space">
+          Pengawasan Aktivitas
+        </button>
+      </a>
+      <div class="container">
+        <div class="column">
+          <img src="./img/lokasi.png" class="image" alt="map" />
+        </div>
+        <div class="column">
+          <img src="./img/act.png" class="image" alt="act" />
+        </div>
+      </div>
+    </main>
 
-        </main>
-
-    <h4><strong><i>"We care so you can care more"</i></strong></h4>
+    <h4>
+      <strong><i>"We care so you can care more"</i></strong>
+    </h4>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
