--- a/bootstrap/public/aktivitas.html
+++ b/bootstrap/public/aktivitas.html
@@ -15,15 +15,16 @@
      
      <script>
      const firebaseConfig = {
-         apiKey: "AIzaSyA954go6MZ8QVATqASdTzRNvsm2sJmgF4o",
-         authDomain: "ta-data-f23b7.firebaseapp.com",
-         databaseURL: "https://ta-data-f23b7-default-rtdb.asia-southeast1.firebasedatabase.app",
-         projectId: "ta-data-f23b7",
-         storageBucket: "ta-data-f23b7.appspot.com",
-         messagingSenderId: "75298387807",
-         appId: "1:75298387807:web:b1e01209f2fa5ec28228ea",
-         measurementId: "G-WXJMX58VBM"
-     };
+      apiKey: "AIzaSyDxGCpih25f6v0jVQ0wubGWpqbYaTpcU5w",
+      authDomain: "kkkk-6a282.firebaseapp.com",
+      databaseURL: "https://kkkk-6a282-default-rtdb.firebaseio.com/",
+      projectId: "kkkk-6a282",
+      storageBucket: "kkkk-6a282.appspot.com",
+      messagingSenderId: "81766173140",
+      appId: "1:81766173140:web:dc8535098855c1b35dee41",
+      measurementId: "G-XH8S0QX0YY"
+    };
+
      firebase.initializeApp(firebaseConfig);
      var database = firebase.database();
      </script> 
@@ -47,7 +48,7 @@
     </div>
 
     <div class="box-2">
-      <p>Activity: <span id="reading-activity"></span></p>
+      <p>Aktivitas: <span id="reading-activity"></span></p>
     </div>
 
     <h4><strong><i>"We care so you can care more"</i></strong></h4>
